left images overflow fixes and scrollbar styling

--- a/css/pdp.css
+++ b/css/pdp.css
@@ -40,18 +40,30 @@
     order: 2;
 }
 
+.leftImgThumbs,
+.mainImage {
+    max-height: 380px;
+}
+
 .leftImgThumbs {
     gap: 10px;
     display: flex;
     width: 20%;
     flex-direction: column;
     order: 1;
+    overflow-y: auto;
 }
 
 .leftImg {
     width: 80px;
     border-radius: 10px;
     margin: 0;
+    cursor: pointer;
+    transition: all ease .2s;
+}
+
+.leftImg:hover {
+    box-shadow: 0px 0px 20px 0px rgba(255, 0, 0, 0.25);
 }
 
 .rightPDPcontent {
