--- a/css/style.css
+++ b/css/style.css
@@ -71,12 +71,12 @@ a:hover {
 
 /* Track */
 ::-webkit-scrollbar-track {
-  background: #f1f1f1;
+  background: rgb(231 15 20 / 5%);
 }
 
 /* Handle */
 ::-webkit-scrollbar-thumb {
-  background: #888;
+  background: #E70F14;
 }
 
 /* Handle on hover */
